[package]
name = "dhb-postgres-heroku"
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.4"
authors = ["dhbradshaw"]
description = "Easily connect to heroku postgres."
edition = "2018"

[dependencies]
dotenv = "0.13.0"
openssl = "0.10"
postgres = { version = "0.16.0-rc.2", features = ["with-uuid", "with-chrono"]}
postgres-openssl = "0.2.0-rc.1"
r2d2 = "0.8"
r2d2_postgres = "0.15.0-rc.1"